# GameProjectCPP

./: CMakeLists.txt  Game.cpp  Game.h  README.md
Config/: window.ini
Config/Game/: game_buttons.ini  game_lines.ini  game_sockets.ini  game_textboxes.ini
Config/MainMenu/: mainmenu_buttons.ini  mainmenu_textboxes.ini
Config/PauseMenu/: pausemenu_buttons.ini  pausemenu_textboxes.ini
Config/Tutorial/: tutorial_buttons.ini  tutorial_textboxes.ini
Entity/: Entity.cpp  Entity.h
GUI/: Button.cpp  Button.h  Icon.cpp  Icon.h  Line.cpp  Line.h  Socket.cpp  Socket.h  TextBox.cpp  TextBox.h
GUI/Headers/: Button.h  Icon.h  Includes.h  Line.h  Socket.h  TextBox.h
States/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  PauseState.cpp  PauseState.h  State.cpp  State.h  TutorialState.cpp  TutorialState.h
States/Headers/: GameState.h  MainMenuState.h  PauseState.h  State.h  TutorialState.h
